5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1745_1526.log
== TEST (2019-05-15 14:06:36) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))

-- ERROR:
File "XXXX", line 9
    soma =( e + q) -n
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:06:39) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))

-- ERROR:
File "XXXX", line 9
    soma =( e + q) -n
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:19:00) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=0
while(y>0):
	p=p+1
	print(y)
	if(x)

-- ERROR:
File "XXXX", line 8
    if(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:19:09) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=0
while(y>0):
	p=p+1
	print(y)
	

-- OUTPUT:
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:19:56) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=0
while(y>0):
	p=p+1
	print(y)
	

-- OUTPUT:
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
300
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:22:07) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	p=p+1
	print(y)
	if(x>0):
		
	

-- EXECUTION TIME:
0.549119
-- ERROR:
  File "/home/codebench/codes/1745/1526/main.py", line 11
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:08) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	p=p+1
	print(y)
	if(x>0):
		
	

-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:10) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	p=p+1
	print(y)
	if(x>0):
		
	

-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:18) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	p=p+1
	print(y)
if(x>0):
		
	

-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:36) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	p=p+1
	if(x>0):
		
	

-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:38) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	p=p+1
	if(x>0):
		
	

-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:43) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	p=p+1
if(x>0):
		
	

-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:47) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	p=p+1
   if(x>0):
		
	

-- ERROR:
File "XXXX", line 7
    if(x>0):
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:50) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	p=p+1
   if(x>0):
		
	

-- ERROR:
File "XXXX", line 7
    if(x>0):
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:51) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	p=p+1
   if(x>0):
		
	

-- ERROR:
File "XXXX", line 7
    if(x>0):
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:52) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	p=p+1
   if(x>0):
		
	

-- ERROR:
File "XXXX", line 7
    if(x>0):
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:52) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	p=p+1
   if(x>0):
		
	

-- ERROR:
File "XXXX", line 7
    if(x>0):
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:22:52) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	p=p+1
   if(x>0):
		
	

-- ERROR:
File "XXXX", line 7
    if(x>0):
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:23:19) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	p=p+1
   if(x>0) and (z=1):
		
	

-- ERROR:
File "XXXX", line 7
    if(x>0) and (z=1):
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:37:43) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while(y>0):
	
		
	

-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:37:49) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1
while
	
		
	

-- ERROR:
File "XXXX", line 5
    while
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:37:52) 
-- CODE:
x=int(input("quantidade inicial de mana: "))
y=int(input("gastar por dia: "))
z=int(input("recupera: "))
p=1

	
		
	

-- ERROR:
File "XXXX", line 5
    while
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
